Subscout-04 Implemented Currency API and accordingly updated register route
